# ambpro2_sdk

./: .gitignore  README.md
component/at_cmd/: atcmd_isp.h  atcmd_wifi.h  log_service.h
component/example/amazon_freertos/: amazon_freertos.cmake  app_example.c  example_amazon_freertos.c  libaws_freertos_lts.cmake
component/example/kvs_producer_mmf/: app_example.c  example_kvs_producer_mmf.c  example_kvs_producer_mmf.h  example_kvs_producer_with_object_detection.c  kvs_producer_mmf.cmake  module_kvs_producer.c  module_kvs_producer.h  sample_config.h
component/lwip/api/: lwip_netconf.c  lwipopts.h
component/lwip/lwip_v2.1.2/contrib/addons/tcp_isn/: tcp_isn.c
component/lwip/lwip_v2.1.2/port/realtek/freertos/: ethernetif.c  sys_arch.c
component/lwip/lwip_v2.1.2/src/api/: api_lib.c  api_msg.c  sockets.c  tcpip.c
component/lwip/lwip_v2.1.2/src/core/: dns.c  netif.c  raw.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
component/lwip/lwip_v2.1.2/src/core/ipv4/: autoip.c  dhcp.c  etharp.c  icmp.c  igmp.c  ip4.c
component/lwip/lwip_v2.1.2/src/core/ipv6/: dhcp6.c  nd6.c
component/lwip/lwip_v2.1.2/src/netif/: ethernet.c
component/mbed/hal/: rtc_api.h
component/mbed/hal_ext/: audio_api.h  dma_api.h  i2c_ex_api.h
component/mbed/targets/hal/rtl8735b/: analogin_api.c  audio_api.c  config.json  crypto_api.c  dma_api.c  ecdsa_api.c  efuse_api.c  ethernet_api.c  flash_api.c  gpio_api.c  gpio_irq_api.c  i2c_api.c  i2s_api.c  pinmap.c  pinmap_common.c  power_mode_api.c  premake.py  pwmout_api.c  rtc_api.c  serial_api.c  sgpio_api.c  snand_api.c  spi_api.c  sport_api.c  sys_api.c  timer_api.c  trng_api.c  us_ticker.c  wdt_api.c
component/media/mmfv2/: mmf2_module.h  module_rtsp2.c  module_video.c  module_vipnn.c  module_vipnn.h
component/os/freertos/: .gitignore  Makefile  cmsis_os.c  freertos.bat  freertos.sh  freertos_backtrace_ext.c  freertos_cb.c  freertos_heap5_config.c  freertos_heap_rtk.c  freertos_pmu.c  freertos_service.c  freertos_wrapper.c
component/os/freertos/freertos_v202012.00/Source/: tasks.c
component/os/os_dep/: osdep_service.c  psram_reserve.c  sram0_reserve.c  timer_service.c
component/soc/8735b/app/shell/ram_s/: config.json
component/soc/8735b/app/shell/rom_ns/: config.json
component/soc/8735b/app/stdio_port/rom/: config.json
component/soc/8735b/cmsis/cmsis-dsp/source/: config.json  premake.py
component/soc/8735b/cmsis/rtl8735b/include/: cmsis.h  platform_conf.h  verify_conf.h
component/soc/8735b/fwlib/rtl8735b/include/: hal.h  hal_eddsa.h  hal_flash.h  hal_gdma.h  hal_hkdf.h  rtl8735b_audio.h  rtl8735b_gpio.h  rtl8735b_rtc.h  rtl8735b_snand.h  rtl8735b_sport.h  rtl8735b_trng.h  rtl8735b_uart.h  rtl8735b_wdt.h
component/soc/8735b/mbed-drivers/: config.json  premake.py
component/soc/8735b/mbed-drivers/source/: us_ticker_api.c  wait_api.c
component/soc/8735b/misc/driver/: flash_api_ext.c  low_level_io.c
component/soc/8735b/misc/platform/: user_boot.c
component/ssl/mbedtls-2.16.6/include/mbedtls/: aes_alt.h  check_config.h  config.h  config_rsa.h  ssl.h  ssl_internal.h
component/ssl/ssl_func_stubs/: ssl_func_stubs.c
component/ssl/ssl_ram_map/: ssl_ram_map.c
component/video/driver/RTL8735B/: video_api.c  video_api.h  video_boot.c  video_boot.h  video_user_boot.c
component/video/osd2/: isp_osd_example.c  isp_osd_lite.c  osd_render.c
component/wifi/driver/include/: autoconf_8735b.h  rtw_debug.h  wifi_constants.h  wifi_structures.h
component/wifi/wifi_fast_connect/: wifi_fast_connect.h
doc/: ApplicationNote.Build_Environment.en.md  ApplicationNote.HW_Description.en.md  ApplicationNote.ISP_SW_Dev_Guide.en.md  ApplicationNote.Image_Download.en.md  ApplicationNote.Video_Example.en.md  KVS_producer_example_README.md  KVS_producer_with_object_detection_example_README.md
doc/demo_quick_start/: AI_Yolov4_Object_Detection_README.md  AWS_KVS_Producer_README.md  AWS_KVS_Producer_With_AI_Yolov4_README.md
project/realtek_amebapro2_v0_example/GCC-RELEASE/: CMakeLists.txt  config.cmake  includepath.cmake  sensor_iq.cmake  toolchain.cmake
project/realtek_amebapro2_v0_example/GCC-RELEASE/ROM/GCC/: rtl8735b_boot.ld  rtl8735b_ns.ld  rtl8735b_ram_ns.ld  rtl8735b_s.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/ROM/GCC/test_chip_ld/: rtl8735b_boot.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/application/: CMakeLists.txt  application.cmake  rtl8735b_ram.ld  rtl8735b_ram_noddr.ld  rtl8735b_ram_ns.ld  rtl8735b_ram_s.ld  rtl8735b_ram_xip.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/bootloader/: CMakeLists.txt  rtl8735b_boot_mp.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/mp/: amebapro2_bootloader.json  amebapro2_firmware_ntz_xip.json  amebapro2_firmware_tz.json  amebapro2_fwfs_nn_models.json  amebapro2_partitiontable.json  amebapro2_sensor_set.json  certificate.json  fw_gen.sh  gen_snrlst.linux  key_cfg.json
project/realtek_amebapro2_v0_example/inc/: .gitignore  FreeRTOSConfig.h  build_info.h.in  platform_opts.h  sensor.h
project/realtek_amebapro2_v0_example/src/: main.c
project/realtek_amebapro2_v0_example/src/VIPLiteDrv/sdk/inc/: vip_lite.h  vip_lite_common.h
project/realtek_amebapro2_v0_example/src/amazon_kvs/lib_amazon/: libkvs_producer.cmake
project/realtek_amebapro2_v0_example/src/amazon_kvs/lib_amazon/gcc_include/: dirent.h
project/realtek_amebapro2_v0_example/src/mmfv2_video_example/: app_example.c  mmf2_pro2_video_config.h  mmf2_video_example_v1_init.c  mmf2_video_example_vipnn_rtsp_init.c  nn_osd_draw.c  nn_osd_draw.h  video_example_media_framework.c  video_example_media_framework.cmake  video_example_media_framework.h
project/realtek_amebapro2_v0_example/src/test_model/: model_mobilefacenet.c  model_scrfd.c  model_yolo.c  yolov4_tiny.nb
project/realtek_amebapro2_v0_example/src/test_model/img_process/: img_process.h
project/realtek_amebapro2_v0_example/src/test_model/model_nb/: plumerai_detector.nb  plumerai_embedder.nb
project/realtek_amebapro2_v0_example/src/test_model/nn_utils/: class_name.c  iou.c  nms.c  quantize.c  sigmoid.c  tensor.c
(+76 files in other folders)
